apps/nocodb/middleware-nocodb-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nocodb-oauth2
  namespace: nocodb
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Forwarded-Email
