apps/nocodb/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nocodb
  labels:
    name: nocodb
