apps/nocodb/service-nocodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  namespace: nocodb
spec:
  selector:
    app: nocodb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
